--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/fiber": "^9.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.178.0",
