--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@react-three/fiber": "^9.2.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.178.0",
-    "zustand": "^5.0.6"
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
