--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.0",
